--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
 .App {
   text-align: center;
+  padding-left: 50px;
+  padding-right: 50px;
+
 }
 
+.dashboard {
+  padding-left: 0;
+  padding-right: 0;
+}
+@media screen and (max-width: 1024px) {
+  .App{
+  padding-left: 0px;
+  padding-right: 0px;
+  }
+}
 .app-container {
   display: flex;
 }
