--- a/src/Dashboards/Dashboard/Transactions/Transactions.scss
+++ b/src/Dashboards/Dashboard/Transactions/Transactions.scss
@@ -1,57 +1,95 @@
-.transactions {
-    padding: 20px;
-    max-width: 900px;
-    margin: 0 auto;
-    background-color: #131720;
-    border: 0.5px solid #151515;
-    border-radius: 16px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    font-family: "Arial", sans-serif;
+
+
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.chart-container {
+  margin-bottom: 40px;
+  color: #0bd7b5;
+}
+
+.transactions-table {
+  width: 100%;
+  overflow-x: auto;
+}
+
+.scrollable-table {
+  width: 100%;
+  border-collapse: collapse;
+
+  .scrollable-table-th, .scrollable-table-td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    color: #0bd7b5;
+  }
+
+  .scrollable-table-th {
+    background-color: #f4f4f4;
+  }
+
+  .scrollable-table-td {
+    word-wrap: break-word;
+    max-width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: #0bd7b5;
+  }
+
   
-    .title {
-      text-align: center;
-      font-size: 1.8rem;
+  .status {
+    &.pending {
+      color: red; /* Set the text color to red for Pending status */
       font-weight: bold;
-      color: white;
-      margin-bottom: 20px;
+      border-bottom: 1px solid #ddd;
+
     }
-  
-    .transactions-table {
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        font-size: 1rem;
-        text-align: left;
-  
-        th {
-          background-color: #131720;
-          color: white;
-          padding: 10px;
-          text-transform: uppercase;
-        }
-  
-        td {
-          padding: 10px;
-          border-bottom: 1px solid #e0e0e0;
-        }
-  
-        tr.complete td {
-          color: lightgreen;
-        }
-  
-        tr.pending td {
-          color: rgb(158, 25, 25);
-          font-weight: bold;
-        }
-  
-        .status {
-          text-transform: capitalize;
-        }
-  
-        tr:hover {
-          background-color: #2b1818;
-        }
-      }
+    /* You can add other statuses here */
+    &.complete {
+      color: #0bd7b5; /* Example for 'Complete' status */
+      border-bottom: 1px solid #ddd;
+
     }
   }
   
+}
+
+.transaction-cell {
+  position: relative;
+}
+
+.truncated {
+  display: inline-block;
+  max-width: 150px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+  font-weight: normal;
+  color: #0bd7b5;
+  text-decoration: underline;
+}
+
+.full-text {
+  display: none;
+  font-weight: normal;
+}
+
+.truncated:hover + .full-text {
+  display: inline-block;
+}
+
+.full-text {
+  word-wrap: break-word;
+  color: #000;
+}
+
+.truncated:hover {
+  color: #0056b3;
+}
+
+
+
