--- a/src/components/ReportCaseModal/ReportCaseModal.scss
+++ b/src/components/ReportCaseModal/ReportCaseModal.scss
@@ -53,6 +53,7 @@
             margin-bottom: 5px;
             font-weight: bold;
             color: #555;
+            text-align: left;
           }
   
           input, textarea {
@@ -64,7 +65,7 @@
             box-sizing: border-box;
   
             &:focus {
-              border-color: #FFD700;
+              border-color: hsla(28, 40%, 45%, 1);
               outline: none;
             }
           }
@@ -77,7 +78,7 @@
       }
   
       .submit-button {
-        background-color: #FFD700;
+        background-color: hsla(28, 40%, 45%, 1);
         color: white;
         border: none;
         padding: 10px 15px;
@@ -88,7 +89,7 @@
         transition: background-color 0.3s ease;
         
         &:hover {
-          background-color: #FFD700;
+          background-color: rgb(137, 98, 65);
         }
       }
     }
@@ -110,6 +111,100 @@
   }
   
 .report-button{
-  width: 140px;
   height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 16px; /* Adjust padding */
+  background-color: hsla(28, 40%, 56%, 1); /* Login button background color */
+  color: black; /* Text color */
+  border: none; /* No border */
+  border-radius: 5px; /* Rounded corners */
+  white-space: nowrap; /* Prevent text from wrapping */
+  font-weight: inherit; /* Make text bold */
+  line-height: 16px; /* Adjust line height for better alignment */
+  font-size: 16px; /* Set font size */
+  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out; /* Smooth transitions for background and shadow */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; /* Prevent text selection */
+  margin-bottom: 10px;
+
+  &:hover {
+    background-color:   hsla(28, 40%, 45%, 1); /* Darken background on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+  }
+}
+
+@media screen and (max-width: 768px){
+
+
+ 
+   
+.report-button{
+  height: 45px;
+  display: flex;
+  margin-left: 15%;
+width: 230px;
+  padding: 10px 16px; /* Adjust padding */
+  margin-left: 20%;
+  background-color: hsla(28, 40%, 56%, 1); /* Login button background color */
+  color: black; /* Text color */
+  border: none; /* No border */
+  border-radius: 5px; /* Rounded corners */
+  white-space: nowrap; /* Prevent text from wrapping */
+  font-weight: inherit; /* Make text bold */
+  line-height: 16px; /* Adjust line height for better alignment */
+  font-size: 16px; /* Set font size */
+  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out; /* Smooth transitions for background and shadow */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; /* Prevent text selection */
+  
+
+  &:hover {
+    background-color:   hsla(28, 40%, 45%, 1); /* Darken background on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+  }
+}
+}
+
+
+@media screen and (max-width: 480px){
+
+ 
+   
+.report-button{
+  
+  margin-left: 15%;
+  height: 45px;
+  display: flex;
+  width: 230px;
+
+  padding: 10px 16px; /* Adjust padding */
+  background-color: hsla(28, 40%, 56%, 1); /* Login button background color */
+  color: black; /* Text color */
+  border: none; /* No border */
+  border-radius: 5px; /* Rounded corners */
+  white-space: nowrap; /* Prevent text from wrapping */
+  font-weight: inherit; /* Make text bold */
+  line-height: 16px; /* Adjust line height for better alignment */
+  font-size: 16px; /* Set font size */
+  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out; /* Smooth transitions for background and shadow */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; /* Prevent text selection */
+  margin-bottom: 10px;
+
+  &:hover {
+    background-color:   hsla(28, 40%, 45%, 1); /* Darken background on hover */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+  }
+}
 }
