--- a/src/components/Section2/Section2.scss
+++ b/src/components/Section2/Section2.scss
@@ -1,5 +1,7 @@
 .section2 {
     padding: 40px;
+    padding-left: 150px;
+    padding-right: 150px;
     text-align: center;
 
     
@@ -10,7 +12,7 @@
       gap: 20px;
       margin-bottom: 30px;
       text-decoration: none;
-  
+      flex-direction: column-reverse;
       .card {
         flex: 1;
         background: black;
@@ -71,3 +73,159 @@
     }
   }
   
+
+
+  @media screen and (max-width: 768px) {
+    .section2 {
+      padding: 40px;
+      text-align: center;
+  
+      
+    
+      .cards-container {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        flex-direction: column-reverse;
+        .card {
+          flex: 1;
+          background: black;
+          border-radius: 10px;
+          box-shadow: 0 4px 8px rgb(192, 192, 192, 0.4);
+          overflow: hidden;
+          text-decoration: none;
+    
+          .card-image {
+            width: 100%;
+            height: 250px; 
+            overflow: hidden;
+    
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+            
+            
+  
+            
+          }
+    
+          .card-description {
+            padding: 20px;
+            font-size: 16px;
+            text-decoration: none;
+            color: white;
+            
+    
+            p {
+              margin: 0;
+              text-decoration: none;
+            }
+          }
+    
+          &:hover {
+            box-shadow: 0 8px 16px rgba(255, 252, 252, 0.2);
+            transform: translateY(-5px);
+            transition: all 0.3s ease;
+          }
+        }
+      }
+    
+      .more-link {
+        .more-link-text {
+          
+          font-size: 18px;
+          color: royalblue;
+          text-decoration: none;
+          font-weight: bold;
+    
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    
+    
+  }
+
+
+  @media screen and (max-width: 768px) {
+    .section2 {
+      padding: 40px;
+      text-align: center;
+  
+      
+    
+      .cards-container {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        flex-direction: column-reverse;
+        .card {
+          flex: 1;
+          background: black;
+          border-radius: 10px;
+          box-shadow: 0 4px 8px rgb(192, 192, 192, 0.4);
+          overflow: hidden;
+          text-decoration: none;
+    
+          .card-image {
+            width: 100%;
+            height: 250px; 
+            overflow: hidden;
+    
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+            
+            
+  
+            
+          }
+    
+          .card-description {
+            padding: 20px;
+            font-size: 16px;
+            text-decoration: none;
+            color: white;
+            
+    
+            p {
+              margin: 0;
+              text-decoration: none;
+            }
+          }
+    
+          &:hover {
+            box-shadow: 0 8px 16px rgba(255, 252, 252, 0.2);
+            transform: translateY(-5px);
+            transition: all 0.3s ease;
+          }
+        }
+      }
+    
+      .more-link {
+        .more-link-text {
+          
+          font-size: 18px;
+          color: royalblue;
+          text-decoration: none;
+          font-weight: bold;
+    
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    
+    
+  }
