--- a/src/components/Section4/Section4.scss
+++ b/src/components/Section4/Section4.scss
@@ -1,18 +1,16 @@
 .section4 {
-  padding: 60px 20px;
   text-align: center;
 
   .section4-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, #f5f5f5 0%, #ffffff 100%);
     border-radius: 20px;
     padding: 40px;
     max-width: 1200px;
     margin: 0 auto;
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     position: relative;
 
@@ -23,7 +21,6 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 123, 255, 0.05);
       z-index: -1;
       transform: rotate(-5deg);
       transform-origin: center;
@@ -34,7 +31,9 @@
     flex: 1 1 50%;
     padding: 20px;
     text-align: left;
-
+    p{
+      text-align: left;
+    }
     .header {
       font-size: 26px;
       color: #333;
@@ -57,8 +56,9 @@
 
   @media (max-width: 768px) {
     .section4-container {
-      flex-direction: column;
-    }
+      flex-wrap: nowrap;
+      flex-direction: row;
+      justify-content: center;    }
 
     .video-wrapper, .description-wrapper {
       flex: 1 1 100%;
