--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -1,10 +1,11 @@
 .faq-section {
     margin: auto;
     justify-content: center;
-    max-width: 750px;
     font-family: "Lato", serif;
     font-weight: 700;
-    
+    text-align: left;
+    padding-left: 15px;
+    padding-right: 15px;    
     h1{
         padding-top: 5%;
         font-size: 2.5em;
@@ -26,7 +27,9 @@
         
     }
 
-    
+    .arrow-down{
+        justify-content: right;
+    }
 
     .faq-content {
         padding: 0 18px;
@@ -51,4 +54,17 @@
 
 .align-collapse{
     display: flex;
+}
+
+.padding-home{
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .padding-home{
+        padding-right: 0px;
+        padding-left: 0px;
+    }
 }
