--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,26 @@
 .text-center{
-    padding: 0 160px;
+    padding: 0 2.1rem;
     font-size: 18px;
+    text-align: left;
+   
+}
+
+.text-center-h2{
+    text-align: left;
+}
+
+.text-center-p{
+    text-align: left;
+}
+.padding-home{
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .padding-home{
+        padding-right: 20px;
+        padding-left: 20px;
+    }
 }
